# Project_OliverZhou

./: 1q  Bank Telemarketing.html  Dillard's Project ROI Analysis.xlsx  Dillard's Project.ipynb  Future Stock Price Prediction_code.ipynb  GroupProject3 copy.Rmd  Movie_prediction_end-to-end.ipynb  README.md
.ipynb_checkpoints/: Dillard's Project-checkpoint.ipynb  Movie_prediction_end-to-end-checkpoint.ipynb
Cloud Engineering(AWS)/S3:ECR:ECS/Cloud Classification Application on AWS/: Makefile  README.md  pyproject.toml  requirements.txt
Cloud Engineering(AWS)/S3:ECR:ECS/Cloud Classification Application on AWS/tests/: pytest.ini  unit_tests.py
Cloud Engineering(AWS)/S3:ECR:ECS/Cloud Classification Application on AWS/tests/artifacts/default/: train.csv  trained_model_object_1.pkl
Cloud Engineering(AWS)/Streamlit Cancer Prediction on AWS/: README.md
Cloud Engineering:AWS/MLDS423_project_aws_inference-main/: README.md
Data Visualization:Business Intelligence/: Walmart_Story.twbx
Deep Learning Project/Object Detection and Emotion Classification/: deep_learning_final_project_deteciton.ipynb  yolo.ipynb
Deep Learning/Object Detection and Emotion Classification/: Dog_Images_MobileNetV2_model.ipynb  Dog_images_DL_proj_Vgg.ipynb  MobileNetV2_model.ipynb
Machine Learning Project/Bank Telemarketing Center Optimization Project/: Tele_Project_Final copy.Rmd
NLP/: job_posting_withscore.csv
NLP/baseline/: LLM_models.ipynb  distilbart-summaries.txt  eda.ipynb  grid_search_results.csv  grid_search_results_sorted.csv  model.ipynb  model3.ipynb  skills.json  test.csv  (+2 more)
(+21 files in other folders)
