[tool.poetry]
name = "cloud_app"
version = "0.1.0"
description = ""
authors = ["Xinyang Zhou <oliverforlifeonly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
altair = "^5.3.0"
boto3 = "1.34.103"
botocore = "1.34.103"
joblib = "^1.4.2"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.2.2"
scipy = "1.13.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ipython = "^8.24.0"
pytest = "7.4.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
